# rust-attic

./: README.md
2023/hello-tcp-echo/: Cargo.toml
2023/runner-sqlite-rs/: Cargo.toml
2023/runner-sqlite-rs/src/: main.rs
2023/yew-global-state/: Cargo.toml
2023/yew-global-state/src/: main.rs  model.rs
2023/yew-global-state/src/layout/: mod.rs
2023/yew-global-state/src/layout/my_list/: item.rs  mod.rs
archived-ideas/beats/: Cargo.toml
archived-ideas/calc-rs/.devcontainer/: Dockerfile
archived-ideas/multi-task/: Cargo.toml
archived-ideas/pluggable-system/hello/: Cargo.toml
archived-ideas/pluggable-system/input/: Cargo.toml
archived-ideas/pluggable-system/principal/: Cargo.toml
archived-ideas/quicknet/: docker-compose.yml
archived-ideas/quicknet/client/: Cargo.toml
archived-ideas/quicknet/client/scripts/: deploy.sh
archived-ideas/quicknet/quicknet_client/: Cargo.toml
archived-ideas/quicknet/quicknet_core/: Cargo.toml
archived-ideas/quicknet/quicknet_server/: Cargo.toml
archived-ideas/quicknet/scripts/: deploy.sh
archived-ideas/quicknet/server/: Cargo.toml
archived-ideas/tricknet/: Cargo.toml
archived-ideas/tricknet/scripts/: fetch.sh
