[package]
name = "tricknet"
version = "0.1.0"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
description = "Do some useful things with UDP"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
des = "0.6.0"
md5 = "0.7.0"
rand = "0.8.0"


[profile.release]
lto = true

debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
