[package]
name = "quicknet_client"
version = "0.1.0"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

md5 = "0.7.0"
nanorand = "0.5.1"

quicknet_core = { path = '../quicknet_core' }
